--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "framer-motion": "^11.3.21",
     "lucide-react": "^0.417.0",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icon-cloud": "^4.1.4",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
